feat: changed entities
