# src/DAL/entity/index.ts
@@ -1,5 +1,5 @@
-export * from './artifact';
-export * from './artifactType';
-export * from './task';
-export * from './taskGeometry';
-export * from './webhook';
+export * from './artifacts';
+export * from './customers';
+export * from './tasks';
+export * from './taskGeometries';
+export * from './webhooks';
